# LIAIN

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: ARCHITECTURE.md  INSTALL.md
examples/quickstart/: .env.example  contacts.yaml.example  llm.yaml.example  persona.yaml.example
liain/: __init__.py  cli.py  config.py  persona.py  secrets.py
liain/brain/: __init__.py  diary.py  embedder.py  manager.py  memory.py  paths.py  records.py  reflection.py  working.py
liain/channels/: __init__.py  base.py  telegram.py
liain/llm/: __init__.py  backends.py  profiles.py
